--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -41,17 +41,15 @@ jobs:
               id: tf-plan
               run: terraform plan -out=tfplan
               env:
-                ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-                ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-                ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+                clientId: ${{ secrets.AZURE_CLIENT_ID }}
+                clientSecret: ${{ secrets.AZURE_CLIENT_SECRET }}
+                tenantId: ${{ secrets.AZURE_TENANT_ID }}
 
             - name: Terraform Apply
               if: github.ref == 'refs/heads/main' && github.event_name == 'push'
               run: terraform apply -auto-approve tfplan
               env:
-                ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-                ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-                ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+                clientId: ${{ secrets.AZURE_CLIENT_ID }}
+                clientSecret: ${{ secrets.AZURE_CLIENT_SECRET }}
+                tenantId: ${{ secrets.AZURE_TENANT_ID }}
 
