--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -27,11 +27,13 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.5.0
-      - name: Debug Azure Credentials
+      - name: Debug Azure Secrets
         run: |
-            echo "Client ID: $AZURE_CLIENT_ID"
-            echo "Tenant ID: $AZURE_TENANT_ID"
-            echo "Subscription ID: $AZURE_SUBSCRIPTION_ID"
+            echo "Client ID: ${{ secrets.AZURE_CLIENT_ID }}"
+            echo "Client Secret: ${{ secrets.AZURE_CLIENT_SECRET }}"
+            echo "Tenant ID: ${{ secrets.AZURE_TENANT_ID }}"
+            echo "Subscription ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+        
         
 
       - name: Login to Azure
