--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,10 +40,10 @@ jobs:
         uses: azure/login@v1
         with:
             creds: |
-              client-id=${{ secrets.AZURE_CLIENT_ID }}
-              client-secret=${{ secrets.AZURE_CLIENT_SECRET }}
-              tenant-id=${{ secrets.AZURE_TENANT_ID }}
-              subscription-id=${{ secrets.AZURE_SUBSCRIPTION_ID }}
+              AZURE_CLIENT_ID= ${{ secrets.AZURE_CLIENT_ID }}
+              AZURE_CLIENT_SECRET= ${{ secrets.AZURE_CLIENT_SECRET }}
+              AZURE_TENANT_ID= ${{ secrets.AZURE_TENANT_ID }}
+              AZURE_SUBSCRIPTION_ID= ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
         run: terraform init -backend-config=environments/dev/provider.tf
