--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   terraform:
-    name: terraform workflow
+    name: Terraform Workflow
     runs-on: ubuntu-latest
 
     permissions:
@@ -27,23 +27,22 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.5.0
+
       - name: Debug Azure Secrets
         run: |
             echo "Client ID: ${{ secrets.AZURE_CLIENT_ID }}"
             echo "Client Secret: ${{ secrets.AZURE_CLIENT_SECRET }}"
             echo "Tenant ID: ${{ secrets.AZURE_TENANT_ID }}"
             echo "Subscription ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-        
-        
 
       - name: Login to Azure
         uses: azure/login@v1
         with:
-            creds: |
-              AZURE_CLIENT_ID= ${{ secrets.AZURE_CLIENT_ID }}
-              AZURE_CLIENT_SECRET= ${{ secrets.AZURE_CLIENT_SECRET }}
-              AZURE_TENANT_ID= ${{ secrets.AZURE_TENANT_ID }}
-              AZURE_SUBSCRIPTION_ID= ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: |
+            client-id=${{ secrets.AZURE_CLIENT_ID }}
+            client-secret=${{ secrets.AZURE_CLIENT_SECRET }}
+            tenant-id=${{ secrets.AZURE_TENANT_ID }}
+            subscription-id=${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
         run: terraform init -backend-config=environments/dev/provider.tf
@@ -57,18 +56,8 @@ jobs:
         id: tf-plan
         run: terraform plan -out=tfplan -var-file=environments/dev/terraform.tfvars
         working-directory: environments/dev
-        env:
-          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve tfplan
         working-directory: environments/dev
-        env:
-          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
