--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -38,11 +38,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: |
-            client-id=${{ secrets.AZURE_CLIENT_ID }}
-            client-secret=${{ secrets.AZURE_CLIENT_SECRET }}
-            tenant-id=${{ secrets.AZURE_TENANT_ID }}
-            subscription-id=${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Terraform Init
         run: terraform init -backend-config=environments/dev/provider.tf
