--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -30,15 +30,19 @@ jobs:
 
       - name: Debug Azure Secrets
         run: |
-            echo "Client ID: ${{ secrets.AZURE_CLIENT_ID }}"
-            echo "Client Secret: ${{ secrets.AZURE_CLIENT_SECRET }}"
-            echo "Tenant ID: ${{ secrets.AZURE_TENANT_ID }}"
-            echo "Subscription ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+            echo "AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}"
+            echo "AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}"
+            echo "AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}"
+            echo "AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
 
       - name: Login to Azure
         uses: azure/login@v1
         with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: |
+            AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}
+            AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
+            AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
+            AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
         run: terraform init -backend-config=environments/dev/provider.tf
