--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -35,19 +35,10 @@ jobs:
             echo "AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}"
             echo "AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
 
-      - name: Login to Azure
-        uses: azure/login@v1
+      - name: Setup Azure CLI
+        uses: azure/setup-azure-cli@v1
         with:
-          creds: |
-            clientId=${{ secrets.AZURE_CLIENT_ID }}
-            clientSecret=${{ secrets.AZURE_CLIENT_SECRET }}
-            tenantId=${{ secrets.AZURE_TENANT_ID }}
-            subscriptionId=${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        env:
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Terraform Init
         run: terraform init -backend-config=environments/dev/provider.tf
