--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -39,7 +39,7 @@ jobs:
             AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
-        run: terraform init -backend-config=environments/dev/provider.tf
+        run: terraform init 
         working-directory: environments/dev
 
       - name: Terraform Validate
