--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -39,7 +39,7 @@ jobs:
             AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
-        run: terraform init 
+        run: terraform init -backend-config=provider.tf
         working-directory: environments/dev
 
       - name: Terraform Validate
@@ -48,7 +48,7 @@ jobs:
 
       - name: Terraform Plan
         id: tf-plan
-        run: terraform plan -out=tfplan -var-file=environments/dev/terraform.tfvars
+        run: terraform plan -out=tfplan -var-file=terraform.tfvars
         working-directory: environments/dev
         env:
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
