--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,16 +40,16 @@ jobs:
 
       - name: Terraform Init
         run: terraform init -backend-config=provider.tf
-        working-directory: environments/dev
+        working-directory: environment/dev
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: environments/dev
+        working-directory: environment/dev
 
       - name: Terraform Plan
         id: tf-plan
         run: terraform plan -out=tfplan -var-file=terraform.tfvars
-        working-directory: environments/dev
+        working-directory: environment/dev
         env:
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -59,7 +59,7 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve tfplan
-        working-directory: environments/dev
+        working-directory: environment/dev
         env:
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
